--- a/src/component/modal/modal.module.scss
+++ b/src/component/modal/modal.module.scss
@@ -69,12 +69,12 @@
                 position: absolute;
                 z-index: 1002;
                 top: -3%;
-                left: 39%;
+                left: 46%;
                 // padding: 1%;
                 box-shadow: 2px 2px 5px 1px #02141383;
-                border-radius: 30px;
+                border-radius: 50%;
                 // min-height: 148px;
-                min-width: 22%;
+                min-width: 12%;
                 opacity: 86%;
                 overflow: hidden;
                 transform: skewX(0deg);
