--- a/src/component/chat/chat.scss
+++ b/src/component/chat/chat.scss
@@ -83,12 +83,6 @@ body {
 
 // innerForm
 .innerForm {
-  // text-align: left;
-  // height: 100vh;
-  // align-items: center;
-  // background-color: #00928596;
-  // border: 5px solid black;
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -105,11 +99,12 @@ body {
 
 // message input and message button  
 .msgSub {
-  display: flex;
+  // display: flex;
   width: 100%;
-  margin-top: 360px;
-  margin-left: auto 5px;
-  // position: relative;
+  // margin-top: 360px;
+  // margin-left: auto 5px;
+  position: fixed;
+  bottom: 5px;
 }
 
 // message input 
@@ -167,9 +162,30 @@ body {
   // text-transform: uppercase;
 }
 
+// user Name 
 .userName {
   font-weight: bold;
   color: rgb(2, 51, 51);
   font-family: 'Roboto', sans-serif;
   display: inline;
+}
+
+// close button 
+.close { 
+  position: fixed;
+  top : px;
+  right: 10px;
+  color: white;
+  border: 2px solid #00928596;
+  border-radius: 20%;
+  background-color: #00928596;
+  padding: 1px;
+  width: 40px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.close:hover {
+  background-color: white;
+  color : #00928596;
 }
