--- a/src/component/donor/donor.scss
+++ b/src/component/donor/donor.scss
@@ -151,10 +151,10 @@ text-align: center;
     font-size: 14px;
     border: none;
     padding: 10px 10px;
-    margin: -1% auto 1%;
+    // margin: -1% auto 1%;
     border-radius: 20px;
     background: rgba(255, 255, 255, 0.1);
-    width: 100%;
+    width: 90%;
 }
 .update-label{
     color:rgb(219, 218, 218);
@@ -389,4 +389,14 @@ grid-template-columns: 50% 50%;
   }
   .form-lable-r label {
     margin-left: 1%;
+}
+.form-lable-r {
+    background-color: rgba(255, 255, 255, 0.185);
+    border: none;
+    margin-bottom: 1%;
+    
+    margin-top: 2%;
+    
+    width: 90% !important;
+    border-radius: 25px;
 }
