edit slide show image'

--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -225,27 +225,31 @@ header{
     background-size: cover;
     opacity: .95;
     background-attachment: fixed;
-    animation: homeSlide 30s linear 0s infinite;
-    transition:all 10s ease-in-out;
+    animation: homeSlide 20s linear 0s infinite;
+    transition:all 0s ease-in-out;
 }
 
 @keyframes homeSlide{
     0%{
-        background-image: url(https://files.slack.com/files-pri/TNGRRLUMA-F010P1QUM52/depositphotos_187656914_s-2019.jpg);
+        background-image: url(https://i.ibb.co/hR7ghcg/img-home-5.jpg);
        transform: scale(1) translateY(0px);
     }
     20%{
-        background-image: url(https://files.slack.com/files-pri/TNGRRLUMA-F010P1QUM52/depositphotos_187656914_s-2019.jpg);
+        background-image: url(https://i.ibb.co/hR7ghcg/img-home-5.jpg);
        transform: scale(1.1) translateY(-20px); 
     }
+    60%{
+        background-image: url(https://i.ibb.co/hR7ghcg/img-home-5.jpg);
+        transform: scale(1.1) translateY(10px); 
+    }
     80%{
-        background-image: url(https://files.slack.com/files-pri/TNGRRLUMA-F010P1QVBHS/depositphotos_314459712_s-2019.jpg);
-        transform: scale(1) translateY(-20px);
+        background-image: url(https://i.ibb.co/Xb5Md9H/img-home-2.jpg);
+        transform: scale(1) translateY(0px);
         opacity: 80%;
     }
-    99%{
-        background-image: url(https://files.slack.com/files-pri/TNGRRLUMA-F010P1QVBHS/depositphotos_314459712_s-2019.jpg);
-        transform: scale(1.1) translateY(0px);
+    100%{
+        background-image: url(https://i.ibb.co/Xb5Md9H/img-home-2.jpg);
+        transform: scale(1.1) translateY(-20px);
         opacity: 80%;
     }
 }
