--- a/src/component/slideShow/slideShow.scss
+++ b/src/component/slideShow/slideShow.scss
@@ -18,7 +18,7 @@
     scale: (1.0 , 1.0);
     transform: translateZ(0);
     // background-color: red;
-    background-image: url(https://files.slack.com/files-pri/TNGRRLUMA-F010C1C0P7V/depositphotos_104290980_s-2019.jpg);
+    background-image: url(https://i.ibb.co/j41Gxqp/img-home-7.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
