--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -180,8 +180,9 @@
 .page-footer{
     clear: both;
     font-family: 'ABeeZee', sans-serif;
-    width: 99%;
+    width: 100%;
     padding: 4% 0 .5% 4%;
+    margin: auto;
     margin-top: 9pc;
     display: grid;
     color: white;
@@ -312,11 +313,11 @@
   .page-footer {
     clear: both;
     font-family: 'ABeeZee', sans-serif;
-    width: 99%;
+    width: 100%;
     padding: 4% 0 .5% 4%;
     margin-top: 9pc;
     display: grid;
-    box-shadow: 2px 2px 2px 2px #ffffffa6;
+    box-shadow: 1px 1px 2px 1px #ffffffa6;
     color: white;
     letter-spacing: 1px;
     background: rgba(1, 1, 1, 0.95);
