--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -322,3 +322,11 @@
     letter-spacing: 1px;
     background: rgba(1, 1, 1, 0.95);
 }
+
+.links-div .linkes-header {
+    text-align: center;
+    font-size: 21px;
+    margin: 0;
+    margin-left: -23%;
+    padding: 0;
+}
