--- a/src/component/donor/donor.scss
+++ b/src/component/donor/donor.scss
@@ -180,6 +180,7 @@ text-align: center;
     margin: auto;
     color: white;
     border-radius: 20px;
+    margin-top: 2%;
     background: rgba(0, 0, 0, 0.35);
     border: rgba(255, 255, 255, 0.623) solid 1px;
     box-shadow: 3px 3px 3px rgba(45, 148, 105, 0.308);
