--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -51,9 +51,10 @@
         background-color: #b80d0d;
         color: white;
         position: absolute;
-        top: -2%;
+        top: 0;
+        font-size: 14px;
         z-index: 80;
-        left: 12%;
+        left: 18%;
         width: 7%;
         border-radius: 50%;
         padding: 1%;
@@ -134,9 +135,10 @@
         color: white;
         position: absolute;
         top: 2%;
+        font-size: 13px;
         z-index: 80;
         left: 22%;
-        width: 13%;
+        width: 8%;
         border-radius: 50%;
         padding: 1%;
         text-align: center;
