--- a/src/component/sign-forms/signForm.scss
+++ b/src/component/sign-forms/signForm.scss
@@ -284,7 +284,7 @@ input::placeholder {
     border-radius: 25px;
 }
 .google-button {
-	font-family: 'Lato', Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 .login-form .group .label {
     color: #aaa;
