--- a/src/component/chat/chat.scss
+++ b/src/component/chat/chat.scss
@@ -119,7 +119,7 @@ margin: 3%;
   color: rgba(22, 125, 22, 0.76);
   // font-weight: bold;
   font-size: 12px;
-  font-family: "Roboto", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 // message input
@@ -129,7 +129,7 @@ margin: 3%;
 .msgInput {
     width: 79%;
     padding: 2%;
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
     border: solid 2px black;
     background-color: #24272766;
     position: absolute;
@@ -245,7 +245,9 @@ svg.chat:hover{
   transform: rotate(360deg) translateY(-6px) translateX(0px);
   transition: 850ms;
 }
-
+svg {
+  overflow: none;
+}
 svg.chat path {
   fill: black;
 }
@@ -266,7 +268,7 @@ svg.chat path {
     font-size: 17px;
     border-bottom: 2px groove rgba(255, 255, 255, 0.356);
     letter-spacing: 2px;
-    font-family: "Roboto", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .logoImg:hover{
   // position: 1;
