--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -60,13 +60,13 @@
         padding: 1%;
         text-align: center;
     }
-    .form-button-{
-        padding: 2%;
-         width: 24%;
-        height: 50px;
+    .form-button- {
+        padding: 1%;
+        width: 24%;
+        height: 44px;
         display: block;
         line-height: 20%;
-        font-size: 20px;
+        font-size: 17px;
         margin: auto;
         color: white;
         margin-top: 20px;
@@ -159,10 +159,10 @@
     .form-button-{
         padding: 2%;
          width: 84%;
-        height: 50px;
+        height: 46px;
         display: block;
         line-height: 20%;
-        font-size: 20px;
+        font-size: 17px;
         margin: auto;
         color: white;
         border-radius: 20px;
@@ -181,7 +181,7 @@
 }
 .page-footer{
     clear: both;
-    font-family: 'ABeeZee', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     padding: 4% 0 .5% 4%;
     margin: auto;
@@ -314,7 +314,7 @@
   }
   .page-footer {
     clear: both;
-    font-family: 'ABeeZee', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     padding: 4% 0 .5% 4%;
     margin-top: 9pc;
