--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -8,9 +8,16 @@ html{
     // position: fixed;
     z-index: -1;
 }
-html,body{
-    margin: 0;
-    height: 118%;
+// html,body{
+//     margin: 0;
+//     height: 118%;
+// }
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 *, *:after,*:before{
     box-sizing: inherit;
@@ -29,7 +36,7 @@ header{
 .food{
 //   width: 99%;
   color: #FFF;
-  font-family: 'Righteous', cursive;
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   font-size: 30px;
   margin-left: 10%;
@@ -88,7 +95,7 @@ header{
 
             a{
                 color: rgb(250, 250, 250);
-                font-family: 'Lato', Arial, Helvetica, sans-serif;
+                font-family: Arial, Helvetica, sans-serif;
                 font-size: 26px;
                 margin-left: 30px;
                 text-decoration: none;
@@ -96,6 +103,7 @@ header{
                 display: block;
                 float: left;
                 line-height: 50px;
+                margin-bottom: 10%;
                 padding: 6.5%;
                 border-bottom: groove;
             }
@@ -145,7 +153,8 @@ header{
     position: absolute;
     width: 654%;
     top: -24px;
-    border-radius: 13%;
+    left: -17px;
+    border-radius: 6%;
     background-color: #088074;
 }
 
@@ -153,10 +162,11 @@ header{
     opacity: 55%;
     height: 90%;
     width: 115%;
-    border-radius: 2%;
+    // border-radius: 2%;
     border-radius: 6%;
     background-color: #009688;
     margin-top: -18%;
+    margin-bottom: 4%;
     padding: 5%;
 }
 .sub-menu li:hover{
@@ -173,7 +183,9 @@ header{
     /* padding: 1%; */
     /* padding-bottom: 1%; */
     top: .1%;
+    padding: 6px;
     left: 0;
+    padding: 7px;
     background-color: rgba(2, 2, 2, 0.959);
     width: 100%;
 }
@@ -188,7 +200,7 @@ header{
 }
 .sub-menu li a {
     color: #fafafa;
-    font-family: 'Lato', Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
     margin-left: 32px;
     text-decoration: none;
@@ -226,7 +238,7 @@ header{
     opacity: .95;
     background-attachment: fixed;
     animation: homeSlide 25s linear 0s infinite;
-    transition:all 5s ease-in-out;
+    transition:all 10s ease-in-out;
 }
 
 @keyframes homeSlide{
@@ -330,13 +342,24 @@ header{
 }
 
 .quote{
-    font-family: 'Titillium Web', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     letter-spacing: 3px;
     font-size: 80px;
     background-color: rgba(0, 0, 0, 0.007);
     text-shadow: 3px 3px 5px rgba(33, 34, 33, 0.897);
 }
 
-.chat-block{
-    display: block;
+// .chat-block
+.main-header{
+    max-width: 100%;
+}
+.oppenned .sub-menu {
+    opacity: 55%;
+    height: 89%;
+    width: 107%;
+    border-radius: 6%;
+    background-color: #009688;
+    margin-top: -21%;
+    margin-bottom: 4%;
+    padding: 5%;
 }
