--- a/src/component/modal/modal.module.scss
+++ b/src/component/modal/modal.module.scss
@@ -22,12 +22,13 @@
         background: #016b60ef;
     box-shadow: 0 1px 4px rgba(234, 230, 230, 0.73), 0 0 40px rgba(0, 0, 0, 0.1) inset;
     box-sizing: border-box;
-    border-radius: 28px;
+    border-radius: 6%;
     display: flex;
     flex-direction: column;
-    height: 90%;
+    height: 82%;
     margin: auto;
     padding: 0;
+    // overflow: scroll;
     position: relative;
     top: 50%;
     transform: translateY(-50%);
@@ -51,7 +52,7 @@
             padding: .25em 1em;
 
             span {
-                font-family: 'ABeeZee', sans-serif;
+                font-family: Arial, Helvetica, sans-serif;
                 color: rgba(255, 255, 255, 0.952);
                 text-align: center;
             }
@@ -108,7 +109,9 @@
     box-shadow: 2p 2px 3px 5px brown;
     padding: 2.5%;
     border: solid .5px #086f65;
-    border-radius: 20px;
+    border-radius: 6%;
+    overflow: auto;
+  
             > div {
                 color: rgba(255, 255, 255, 0.938);
                 line-height: 40px;
@@ -154,5 +157,29 @@
                 }
             }
         }
+        > div::-webkit-scrollbar {
+            width: 10px;
+          }
+          
+          /* Track */
+          > div::-webkit-scrollbar-track {
+            background: #f1f1f1c5; 
+            border-radius: 6%;
+          }
+           
+          /* Handle */
+          > div::-webkit-scrollbar-thumb {
+            //   width: 100%;
+            //   height: .01px;
+              border-radius: 6%;
+            background:rgba(0, 0, 0, 0.541); 
+          }
+          
+          /* Handle on hover */
+          > div::-webkit-scrollbar-thumb:hover {
+            border-radius: 6%;
+            background: rgba(0, 0, 0, 0.322); 
+            cursor: grabbing;
+          }
     }
 }
