--- a/src/component/profile.scss
+++ b/src/component/profile.scss
@@ -44,7 +44,7 @@ li {
   font-size: 2em;
   max-width: 600px;
   line-height: 1.3;
-  font-family: 'Gotu', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 2px;
   text-align: center;
   text-transform: uppercase;
