--- a/src/component/footer/footer.scss
+++ b/src/component/footer/footer.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=ABeeZee|Bellota+Text|Righteous|Trade+Winds&display=swap');
 @media (min-width: 768px){
-    .open{
+    .open {
         position: absolute;
-        top: 7px;
+        top: 13px;
         left: 50px;
     }
     .page-footer{
@@ -34,7 +34,7 @@
     }
 
     .footer-copyright:hover , .contact-div:hover , .links-div:hover ,.simple-bio:hover {
-        box-shadow: 3px 6px 9px #075151;
+        box-shadow: 2px 2px 4px #075151;
         transform: scale(1.005);
         transition:850ms;
       }
@@ -201,6 +201,7 @@
     .footer-header{
         text-align: center;
         font-size: 21px;
+        margin-top: 2%;
         margin: .5%;
     }
 }
@@ -210,6 +211,7 @@
         text-align: center;
         font-size: 21px;
         margin: 0;
+        margin-top: 2%;
         padding: 0;
     }
     ul {
@@ -235,6 +237,7 @@
     text-align: left;
     .contact-header{
         font-size: 21px;
+        margin-top: 2%;
         margin: 0;
         padding: 0;
     }
@@ -331,4 +334,8 @@
     margin: 0;
     margin-left: -23%;
     padding: 0;
+}
+.links-div .linkes-header ,.contact-div .contact-header ,.bio-div .bio-header{
+    margin-top: 2%;
+
 }
