--- a/src/component/profile.scss
+++ b/src/component/profile.scss
@@ -323,11 +323,51 @@ z-index: 1;
 }
 
 @media(max-width: 768px) {
+
+
+
+
+
+  
   .parg{
-    overflow: scroll;
-    width: 150px;
+    overflow: auto;
+    width: 120px;
     height: 200px;
   }
+
+
+
+  .parg::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  .parg::-webkit-scrollbar-track {
+    background: #f1f1f1c5; 
+    border-radius: 6%;
+  }
+   
+  /* Handle */
+   .parg::-webkit-scrollbar-thumb {
+    //   width: 100%;
+    //   height: .01px;
+      border-radius: 6%;
+    background:rgba(0, 0, 0, 0.541); 
+  }
+  
+  /* Handle on hover */
+  .parg::-webkit-scrollbar-thumb:hover {
+    border-radius: 6%;
+    background: rgba(0, 0, 0, 0.322); 
+    cursor: grabbing;
+  }
+
+  .parg{
+    font-size: 12%;
+  }
+
+
+
   .page__course{
     padding:2%}
 
